# balancing-scales

./: .gitignore  CMakeLists.txt  README.md  build_and_run_tests.sh
include/: csv.h  tree_of_scales.h
src/: main.cpp
tests/: test0.out  test1.in  test1.out  test2.in  test2.out  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out
